# recipe-tool

./: .env.example  .mcp.json  pyproject.toml  url_refresh_flow_diagram.mmd  url_refresh_flow_diagram_unified.mmd
.claude/: claude-mermaid-diagram.md  mermaid-files.json  mermaid-snapshots.json  settings.local.json
apps/doc-builder-v2/doc_builder_v2_app/: app.py
apps/document-generator/: AZURE_DEPLOYMENT.md  README.md  deploy.sh  pyproject.toml  requirements.txt
apps/document-generator-with-chat/: README.md  pyproject.toml  startup.py
apps/document-generator-with-chat/document_generator_app/: app.py  config.py
apps/document-generator-with-chat/document_generator_app/static/css/: styles.css
apps/document-generator-with-chat/document_generator_app/static/js/: script.js
apps/document-generator-with-chat/document_generator_app_chat/: app.py  assistant.py
apps/document-generator-with-chat/document_generator_app_chat/static/css/: styles.css
apps/document-generator-with-chat/wheels/: docpack_file-0.1.0-py3-none-any.whl  recipe_executor-0.1.3-py3-none-any.whl
apps/document-generator/document_generator_app/: app.py  assistant.py  config.py  file_processing.py  mcp_assistant.py  resource_resolver.py  simple_mcp_assistant.py  start_tab.py
apps/document-generator/document_generator_app/executor/: runner.py
apps/document-generator/document_generator_app/models/: block.py  outline.py
apps/experimental/document-generator-v2/: startup.py
apps/experimental/document-generator-v2/document_generator_v2_app/: app.py  main.py
recipe-executor/: pyproject.toml
(+6 files in other folders)
