[project]
name = "document-generator-with-chat"
version = "0.2.0"
description = "A Gradio app for building documents with an enhanced interface and AI chat assistant"
authors = [{ name = "MADE:Explorations Team" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.30.0",
    "recipe-executor>=0.1.3",
    "docpack-file>=0.1.0",
    "jsonschema>=4.24.0",
    "python-dotenv>=1.1.1",
    "pypandoc-binary>=1.13",
    "python-docx>=1.1.0",
    "pydantic-ai-slim[anthropic,openai,mcp]>=0.3.1",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "debugpy>=1.8.14",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[project.scripts]
document-generator-app-chat = "document_generator_app_chat.app:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["document_generator_app_chat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
